--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>BoolFlix</title>
@@ -15,7 +16,7 @@
         <div class="">{{resultFor}}</div>
       </header>
       <main class="movie-container">
-        <div v-for="movie in listaFilm" class="movie">
+        <div v-for="(movie, index) in listaFilm" class="movie">
           <div class="title">
             <strong>Titolo:</strong><br>{{movie.title}}
           </div>
@@ -26,7 +27,11 @@
             <strong>Lingua:</strong> {{movie.original_language}}
           </div>
           <div class="vote">
-            <strong>Voto:</strong> {{movie.vote_average}}
+            <strong>Voto:</strong> <br>
+            <div class="star-vote">
+              <i class="fas fa-star" v-for="blackStar in movie.vote_average"></i>
+              <i class="far fa-star" v-for="whiteStar in movie.number_ws"></i>
+            </div>
           </div>
         </div>
       </main>
