--- a/index.html
+++ b/index.html
@@ -13,91 +13,111 @@
     <div id="app" class="container">
       <header>
         <div class="logo-bool">
-          <img src="flag-svg/logo-bool.png" alt="">
+          <img src="image/logo-bool.png" alt="">
         </div>
         <div class="search">
           <input type="text" placeholder="cerca qualcosa..." v-model="query">
           <div class="btn-search" @click="searchAll">
             Cerca <i class="fas fa-angle-right"></i>
           </div>
-          <div class="">{{resultFor}}</div>
         </div>
       </header>
 
       <main>
-        <div class="movie-container">
+        <div class="alert-risultati">{{resultFor}}</div>
 
+        <!-- container film -->
+        <h2 v-if="listaFilm.length > 0">Film</h2>
+        <div class="movie-container">
+          <!-- singola card film -->
           <div v-for="(movie, index) in listaFilm" class="movie">
             <div class="copertina">
               <img :src="imagePoster(index, listaFilm)" alt="">
             </div>
 
-            <div class="title">
-              <strong>Titolo:</strong><br>{{movie.title}}
-            </div>
-
-            <div class="original-title">
-              <strong>Titolo originale:</strong><br>{{movie.original_title}}
-            </div>
-
-            <div class="language">
-              <strong>Lingua:</strong>
-              <div class="string-box" v-if="!flagVisibility(index, listaFilm)">
-                {{movie.original_language}}
+            <div class="info">
+              <div class="title">
+                <strong>Titolo:</strong><br>{{movie.title}}
               </div>
-              <div class="box-image" v-if="flagVisibility(index, listaFilm)">
-                <img :src="flagLang(index, listaFilm)" alt="">
+
+              <div class="original-title">
+                <strong>Titolo originale:</strong><br>{{movie.original_title}}
+              </div>
+
+              <div class="language">
+                <strong>Lingua:</strong>
+                <div class="string-box" v-if="!flagVisibility(index, listaFilm)">
+                  {{movie.original_language}}
+                </div>
+                <div class="box-image" v-if="flagVisibility(index, listaFilm)">
+                  <img :src="flagLang(index, listaFilm)" alt="">
+                </div>
+              </div>
+
+              <div class="vote">
+                <strong>Voto:</strong><br>
+                <div class="star-vote">
+                  <i class="fas fa-star yellow-star" v-for="yellowStar in movie.number_yellowstar"></i>
+                  <i class="far fa-star" v-for="whiteStar in movie.number_whitestar"></i>
+                </div>
+              </div>
+
+              <div class="overview">
+                <strong>Overview</strong>
+                {{movie.overview}}
               </div>
             </div>
-
-            <div class="vote">
-              <strong>Voto:</strong><br>
-              <div class="star-vote">
-                <i class="fas fa-star yellow-star" v-for="yellowStar in movie.number_yellowstar"></i>
-                <i class="far fa-star" v-for="whiteStar in movie.number_whitestar"></i>
-              </div>
-            </div>
-
           </div>
+          <!-- /singola card film -->
         </div>
+        <!-- /container film -->
 
+        <!-- container serie tv -->
+        <h2 v-if="listaSerie.length > 0">Serie TV</h2>
         <div class="series-container">
-
+          <!-- singola card serie tv-->
           <div v-for="(serie, index) in listaSerie" class="serie">
-
             <div class="copertina">
               <img :src="imagePoster(index, listaSerie)" alt="">
             </div>
 
-            <div class="title">
-              <strong>Titolo:</strong><br>{{serie.name}}
-            </div>
-
-            <div class="original-title">
-              <strong>Titolo originale:</strong><br>{{serie.original_name}}
-            </div>
-
-            <div class="language">
-              <strong>Lingua:</strong>
-              <div class="string-box" v-if="!flagVisibility(index, listaSerie)">
-                {{serie.original_language}}
+            <div class="info">
+              <div class="title">
+                <strong>Titolo:</strong><br>{{serie.name}}
               </div>
-              <div class="box-image" v-if="flagVisibility(index, listaSerie)">
-                <img :src="flagLang(index, listaSerie)" alt="">
-              </div>
-            </div>
 
-            <div class="vote">
-              <strong>Voto:</strong><br>
-              <div class="star-vote">
-                <i class="fas fa-star yellow-star" v-for="yellowStar in serie.number_yellowstar"></i>
-                <i class="far fa-star" v-for="whiteStar in serie.number_whitestar"></i>
+              <div class="original-title">
+                <strong>Titolo originale:</strong><br>{{serie.original_name}}
+              </div>
+
+              <div class="language">
+                <strong>Lingua:</strong>
+                <div class="string-box" v-if="!flagVisibility(index, listaSerie)">
+                  {{serie.original_language}}
+                </div>
+                <div class="box-image" v-if="flagVisibility(index, listaSerie)">
+                  <img :src="flagLang(index, listaSerie)" alt="">
+                </div>
+              </div>
+
+              <div class="vote">
+                <strong>Voto:</strong><br>
+                <div class="star-vote">
+                  <i class="fas fa-star yellow-star" v-for="yellowStar in serie.number_yellowstar"></i>
+                  <i class="far fa-star" v-for="whiteStar in serie.number_whitestar"></i>
+                </div>
+              </div>
+
+              <div class="overview">
+                <strong>Overview</strong><br>
+                {{serie.overview}}
               </div>
             </div>
 
           </div>
+          <!-- /singola card serie tv-->
         </div>
-
+        <!-- /container serie tv -->
       </main>
     </div>
 
