--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                 </strong><br>{{element.original_name}}
               </div>
 
+              <!--* questa sezione viene mostrata successivamente, in modo da
+                concludere le chiamate ajax per ottenere i dati sul cast,
+                evitando di rallentare il caricamento delle singole cards film /serie *-->
               <div v-if="flagDisplayCast" class="cast">
                 <strong>Cast:</strong><br>
                 <div v-if="element.actors.length > 0" v-for="attore in element.actors">
@@ -66,6 +69,7 @@
                 </div>
                 <span v-if="element.actors.length === 0">Non disponibile</span>
               </div>
+              <!-- ***********************************************************-->
 
               <div class="language">
                 <strong>Lingua originale:</strong>
